added example 'json' controller and view

--- a/src/jade/app/index.jade
+++ b/src/jade/app/index.jade
@@ -21,7 +21,7 @@ html.no-js(ng-app='')
     // build:css({.tmp,app}) styles/main.css
     link(rel='stylesheet', href='styles/main.css')
     // endbuild
-  body(ng-app='datavizApp')
+  body(ng-app='yarcApp')
     //if lt IE 7
       p.browsehappy
         | You are using an
