--- a/src/jade/app/views/json.jade
+++ b/src/jade/app/views/json.jade
@@ -10,4 +10,4 @@ html
           a(ng-href='#') Contact
       h3.text-muted yarc
     .div
-      p(ng-bind="awesomeThings")
+      p(ng-bind="json")
