--- a/src/jade/app/views/json.jade
+++ b/src/jade/app/views/json.jade
@@ -9,5 +9,5 @@ html
         li
           a(ng-href='#') Contact
       h3.text-muted yarc
-    .div
-      p(ng-bind="json")
+    .div(ng-controller="json")
+      p{{holla_at}}
